--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,11 +1,9 @@
 div {
     color: white;
     background-color: red;
-    font-size: 40px;
+    font-size: 32px;
     font-family: "Verdana",sans-serif;
-    font-weight: bolder;
+    font-weight: bold;
+    text-align: center;
 }
 
-p {
-    color: red;
-}
