--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -5,6 +5,7 @@ body{
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
+  font-weight: 800;
 }
 
 .small-para {
@@ -15,24 +16,24 @@ body{
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
-
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-size: 14px;
-}
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
 
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
+}
+
+.child {
+  color: rgb(0, 0, 0);
+  font-size: 14px;
 }
