--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -33,6 +33,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 8px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -46,6 +48,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
+  
 }
 
 button {
@@ -64,3 +68,38 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.layout {
+  display: flex;
+  padding: 16px;
+  
+}
+
+.header-group {
+  align-items: center;
+}
+
+.text {
+  margin-bottom: 8px;
+  
+}
+
+.text-buttons {
+  flex-direction: column;
+  
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+}
+
+.header-group, .text-buttons {
+  display: flex;
+}
+
+.header-group-text-buttons {
+  display: flex;
+  flex-direction: column;
+}
+
