--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,60 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/*SOLUTION*/
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+.header {
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0px 16px;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.card {
+  width: 300px;
+  display: flex;
+  
+  padding: 32px;
+  justify-content: space-evenly;
+  gap: 32px;
+}
+
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 32px;
+  gap: 32px;
+}
+
+.main-content {
+  display: flex;
+  flex: 1;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
